--- a/trangchu.html
+++ b/trangchu.html
@@ -66,7 +66,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet1.html"><img src="img/bg-img/4.jpg" alt=""></a>
+                            <a href="./page/bai-viet1.html"><img src="img/bg-img/4.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
@@ -83,7 +83,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet2.html"><img src="img/bg-img/5.jpg" alt=""></a>
+                            <a href="./page/bai-viet2.html"><img src="img/bg-img/5.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
@@ -100,7 +100,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet3.html"><img src="img/bg-img/6.jpg" alt=""></a>
+                            <a href="./page/bai-viet3.html"><img src="img/bg-img/6.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
@@ -117,7 +117,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet4.html"><img src="img/bg-img/1.jpg" alt=""></a>
+                            <a href="./page/bai-viet4.html"><img src="img/bg-img/1.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
@@ -134,7 +134,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet5.html"><img src="img/bg-img/2.jpg" alt=""></a>
+                            <a href="./page/bai-viet5.html"><img src="img/bg-img/2.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
@@ -151,7 +151,7 @@
                     <div class="single-blog-post style-2 mb-5">
                         <!-- Blog Thumbnail -->
                         <div class="blog-thumbnail">
-                            <a href="bai-viet6.html"><img src="img/bg-img/3.jpg" alt=""></a>
+                            <a href="./page/bai-viet6.html"><img src="img/bg-img/3.jpg" alt=""></a>
                         </div>
 
                         <!-- Blog Content -->
